# python-projects

./: README.md  pyproject.toml
projects/alarm_clock/: README.md
projects/countdown_timer/: README.md  countdown_timer.py
projects/countdown_timer/tests/: test_countdown_timer.py
projects/currency_converter/: README.md  api.json  currency_converter.py
projects/currency_converter/tests/: test_currency_converter.py
projects/django-drf/book_api/: README.md  requirements.txt
projects/file_organizer/: file_organizer.py
projects/file_organizer/assets/: file_organizer.py
projects/file_organizer/tests/: test_file_organizer.py
projects/general/: README.md
projects/general/countdown_timer/: README.md  countdown_timer.py
projects/general/file_organizer/: README.md  (+2 more)
projects/lyrics_cli/: README.md  lyrics_cli.py
projects/number_guessing_game/: README.md  number_guessing_game.py
projects/password_generator/: README.md  password_generator.py
projects/rock_paper_scissors/: README.md  rock_paper_scissors.py
projects/simple_calculator/: README.md  calculator.py
projects/simple_quiz/: README.md  simple_quiz.py  temp.py
projects/simple_todo/: README.md  data.json  simple_todo.py
projects/text_analyzer/: README.md
projects/text_editor/: README.md  my_file.txt  text_editor.py
projects/text_file_analysis/: pyproject.toml  text_analyzer.py  text_statistics.py  utils.py
projects/text_file_analysis/tests/: test_text_statistics.py
projects/unit_converter/: README.md  unit_converter.py
text_file_analysis/: sample.txt  text_analyzer.py  text_statistics.py
(+41 files in other folders)
