[project]
name = "python-projects"
version = "0.1.0"
description = "A collection of Python mini-projects"
authors = [
    {name = "iBrokeTheCode",email = "alexrtc.dev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

