[project]
name = "text-file-analysis"
version = "0.1.0"
description = "Get information from text file (e.g. number of words, etc.)"
authors = [
    {name = "iBrokeTheCode",email = "alexrtc.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
